# ChangeLog for x11-wm/e
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/e/ChangeLog,v 1.6 2003/03/22 08:27:51 vladimir Exp $

*e-0.17.20030310_pre0-r1 (20 Mar 2003)

  22 Mar 2003; Graham Forest <vladimir@gentoo.org>
  e-0.17.20030310_pre0-r1.ebuild:
  set ~ppc in keywords

  20 Mar 2003; Seemant Kulleen <seemant@gentoo.org>
  e-0.17.20030310_pre0-r1.ebuild:
  pic nonsense, version bump

*e-0.17.20030310_pre0 (10 Mar 2003)

  20 Mar 2003; Seemant Kulleen <seemant@gentoo.org>
  e-0.17.20030310_pre0.ebuild:
  removed the pic nonsense

  13 Mar 2003; Aron Griffis <agriffis@gentoo.org> e-0.17.20030310_pre0.ebuild:
  Add ~alpha to KEYWORDS

  10 Mar 2003; Mike Frysinger <vapier@gentoo.org> :
  Bugfixes ... dunno what really ;)

*e-0.17.20030220_pre0 (20 Feb 2003)

  20 Feb 2003; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by me.