@@ -1,6 +1,11 @@
 # ChangeLog for x11-wm/e
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/e/ChangeLog,v 1.6 2003/03/22 08:27:51 vladimir Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/e/ChangeLog,v 1.7 2003/06/29 19:20:40 vapier Exp $
+
+*e-0.17.20030629_pre0 (29 Jun 2003)
+
+  29 Jun 2003; Mike Frysinger <vapier@gentoo.org> :
+  Version bump.
 
 *e-0.17.20030310_pre0-r1 (20 Mar 2003)
 
